# Vink

./: .gitignore  API_REFERENCES.md  CHANGELOG.md  CONTRIBUTING.md  README.md  bench_pretty_errors.py  demo_poc.py  pyproject.toml
src/vink/: __init__.py  core.py  exceptions.py  filter_parser.py  latency_predictor.py  models.py  sql_wrapper.py  tasker.py
src/vink/strategies/: approximate_search.py  base.py  exact_search.py
src/vink/utils/: id_generation.py  input_validation.py  logging.py
src/vinkra/: __init__.py  core.py  exceptions.py  filter_parser.py  latency_predictor.py  models.py  sql_wrapper.py
src/vinkra/strategies/: approximate_search.py  base.py  exact_search.py
src/vinkra/utils/: id_generation.py  input_validation.py  logging.py
tests/: conftest.py  test_ann_index_recovery.py  test_approximate_search.py  test_exact_search.py  test_filter_translator.py  test_hybrid_search.py  test_tasker.py  test_vector_record_validation.py
vink/: __init__.py  core.py  exceptions.py
vink/utils/: validation.py
