[project]
name = "vink"
version = "0.1.0"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "speedyk_005", email = "speedy40115719@gmail.com" }
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "rii>=0.2.12,<1.0",

    # pysqlite3 0.6 is the only version with prebuilt wheels.
    # 0.7 hasn't been released yet, so we're sticking with 0.6 for now.
    "pysqlite3>=0.6,<0.7",

    "pydantic>=2.12.2,<3.0",
    "uuid6>=2025.0.0; python_version < '3.14'",
    "loguru>=0.7.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.14",
]

[project.urls]
Homepage = "https://github.com/speedyk-005/vink"
Repository = "https://github.com/speedyk-005/vink"

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["vink", "vink.utils", "vink.strategies"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "--cov=vink --cov-report=term-missing:skip-covered --durations=10"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
omit = [
    "src/vink/strategies/base.py",
    "src/vink/**/__init__.py",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E, W (Flake8), F (Pyflakes), I (Isort), B (Bugbear)
select = ["E", "F", "I", "W", "B"]
ignore = ["E501", "E203"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in all __init__.py files
"src/vink/**/__init__.py" = ["F401", "F403"]

[tool.ruff.format]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]
